fixed alignment and adding regex

--- a/style.css
+++ b/style.css
@@ -2,31 +2,60 @@ body {
     font-family: 'Open Sans', sans-serif;
     background-color: teal;
     background-image: linear-gradient(teal, lightblue);
+    margin: 80px auto;
 }
 
 h1, h2, h3 {
     font-family: 'Lobster Two', cursive;
+    margin-bottom: 20px;
 }
 
 .wrapper {
+    background-color: lightblue;
+    border: 1px solid gray;
     display: grid;
-    width: 300px;
-    height: 500px;
-    justify-content: space-evenly;
+    width: 500px;
+    height: auto;
+    grid-template-areas: 
+    "a a a a b b b b"
+    "a a a a b b b b"
+    "a a a a b b b b";
+    grid-gap: 20px;
+    margin: 40px;
 }
 
 .box1 {
-
+    display: grid;
+    grid-area: a;
+    width: 500px;
+    padding: 30px;
 }
 
 .box2 {
-
+    grid-area: b;
+    width: 500px;
+    padding: 30px;
 }
 
 .savebtn {
+    grid-column-start: 3;
+    grid-row-start: 2;
     width: 40px;
     height: 20px;
-    padding: 10px;
+    padding: 7px;
     background-color: aliceblue;
     border: 1px solid gray;
+    
+}
+
+#numberInput {
+    grid-row-start: 2;
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+input {
+    height: 28px;
+    width: auto;
+    font-size: 14pt;
 }
